syntax = "proto3";

option csharp_namespace = "Google.Cloud.SqlCommetner.AspnetCore.Grpc.Test";

package test;

service Tester {
  rpc SayHello (HelloRequest) returns (HelloReply);
}

message HelloRequest {
}

message HelloReply {
  string action_name = 1;
  string controller_name = 2;
  string app_framework = 3;
  string route = 4;
}
